@@ -1,3 +1,8 @@
+2002-09-23  Paul D. Smith  <psmith@gnu.org>
+
+	* scripts/features/escape: Test handling of escaped comment
+	characters in targets and prerequisites.
+
 2002-09-18  Paul D. Smith  <psmith@gnu.org>
 
 	* scripts/features/export: Test export/unexport of multiple
